--- a/styles/style.css
+++ b/styles/style.css
@@ -11,19 +11,23 @@
 
 /* shared styles */
 
-.bg-secondary{
+.bg-secondary {
     background-color: #FFF8F3;
 }
-.text-primary{
+
+.text-primary {
     color: #FD6E0A;
 }
-.dark-2{
+
+.dark-2 {
     color: #474747;
 }
-.dark-3{
+
+.dark-3 {
     color: #757575;
 }
-.btn-primary{
+
+.btn-primary {
     font-size: 20px;
     color: #FFF;
     background-color: #FD6E0A;
@@ -31,146 +35,192 @@
     border-radius: 5px;
     border: none;
 }
-.section-title{
+
+.section-title {
     font-size: 35px;
     font-weight: 700;
     color: #181818;
 }
-.section-description{
+
+.section-description {
     font-size: 18px;
     color: #757575;
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
 
 /* header styles */
-.header{
+.header {
     background: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position: top left, bottom right;
 }
 
 /* main styles */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
-main section{
+
+main section {
     margin-top: 130px;
     margin-bottom: 130px;
 }
 
 
 /* nav styles */
-nav{
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 200px;
 }
-nav ul{
+
+nav ul {
     display: flex;
     align-items: center;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
     margin-right: 50px;
 }
-nav li a{
+
+nav li a {
     text-decoration: none;
     font-size: 20px;
 }
-.nav-title{
+
+.nav-title {
     font-weight: 800;
     font-size: 45px;
 }
 
 
 /* banner styles */
-.banner{
+.banner {
     display: flex;
     justify-content: space-between;
     margin: 0 35px 0 200px;
 }
-.banner-content{
+
+.banner-content {
     max-width: 585px;
 }
-.banner-greetings{
+
+.banner-greetings {
     font-size: 45px;
     font-weight: 600;
 }
-.banner-title{
+
+.banner-title {
     font-size: 85px;
     font-weight: 700;
 }
-.banner-description{
+
+.banner-description {
     font-size: 18px;
 }
-.banner-profile-pic{
+
+.banner-profile-pic {
     width: 584px;
 }
 
 /* about styles */
-.about{
+.about {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
 }
-.about-items{
+
+.about-items {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
 }
-.item-title{
+
+.item-title {
     font-size: 20px;
     color: #757575;
 }
-.item-description{
+
+.item-description {
     font-size: 20px;
     font-weight: 700;
 }
 
 /* skills styles */
-.skill-container{
+.skill-container {
     display: flex;
     gap: 24px;
     margin-top: 50px;
 }
-.skill{
+
+.skill {
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 
 /* resume styles  */
-.resume-container{
+.resume-container {
     display: flex;
     gap: 24px;
 }
-.resume-column-title{
+
+.resume-column-title {
     font-size: 30px;
     font-weight: 700;
     color: #474747;
 }
-.resume .experience-title{
+
+.resume .experience-title {
     font-size: 25px;
     font-weight: 700;
     color: #474747;
     margin-bottom: 10px;
 }
-.experience-sub-title{
+
+.experience-sub-title {
     font-size: 20px;
     font-weight: 600;
     color: #757575;
     margin-bottom: 20px;
 }
-.experience-description{
+
+.experience-description {
     color: #757575;
 }
-.resume hr{
+
+.resume hr {
     margin: 30px 0px;
 }
-.resume-download-cv{
+
+.resume-download-cv {
     margin-top: 50px;
+}
+
+/* footer styles */
+footer {
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+footer input[type="text"], input[type="email"], textarea {
+    width: 460px;
+    /* height: 64px; */
+    padding: 18px 30px;
+    background-color: #FFF;
+    border-radius: 5px;
+    color: #757575;
+    border: none;
+    outline: none;
+    margin-bottom: 24px;
 }
